[package]
name = "astra"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
description = "A synchronous HTTP server built on hyper."
repository = "https://github.com/ibraheemdev/astra"
keywords = ["http", "hyper", "web"]
categories = ["http", "web", "network-programming", "web-programming::http-server"]


[dependencies]
log = "0.4.14"
num_cpus = "1.13.1"
tokio = "1.12.0"
futures-core = "0.3.19"
hyper = { version = "0.14.6", features = ["http1", "http2", "server", "stream"] }
mio = { version = "0.8.0", features = ["os-poll", "net"] }
libc = "0.2.126"
futures-task = "0.3.21"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"

[dev-dependencies]
http = "0.2.8"
matchit = "0.4.4"
serde = "1.0.140"
simd-json = "0.6.0"
